# stress

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu-ci.yml
include/global/: invoker.h  logger.h  stress.h  terminal.h
include/global/core/: error.h  run.h  runtime_config.h  session.h  tests_source.h  tests_source_type.h
include/global/parsing/: args.h  parser.h
include/global/units/: generator.h  prime.h  tests_source.h  to_test.h  unit.h  verifier.h
include/linux/core/: error_info.h  maps.h  stat.h
include/linux/parsing/: proc_parser.h
include/win/core/: error_info.h
routines/version/: generate-version-header.cmake  update-build-number.cmake  version.cpp.in
src/global/: invoker.cpp  logger.cpp  main.cpp  stress.cpp  terminal.cpp
src/global/core/: run.cpp  session.cpp
src/global/parsing/: args.cpp  parser.cpp
src/global/units/: generator.cpp  prime.cpp  tests_source.cpp  to_test.cpp  unit.cpp  verifier.cpp
src/linux/: invoker.cpp  terminal.cpp
src/linux/core/: error_info.cpp  maps.cpp  run.cpp
src/linux/parsing/: proc_parser.cpp
src/win/: invoker.cpp  terminal.cpp
src/win/core/: error_info.cpp  run.cpp
tests/: start.py  tests.py
tests/1_init/1_usage/: test.py
tests/1_init/2_generator_without_solution/: test.py
tests/1_init/3_solution_without_generator/: test.py
tests/1_init/5_generator_with_solution_and_prime/: test.py
tests/2_languages/1_py/: test.py
tests/2_languages/2_c/: test.py
tests/2_languages/2_cpp/: dummy.cpp
tests/2_languages/3_cpp/: test.py
tests/2_languages/4_java/: dummy.java  test.py
tests/2_languages/5_kotlin/: test.py
tests/2_languages/6_rust/: test.py
tests/2_languages/7_go/: test.py
tests/2_verdicts/1_ac/: test.py
tests/2_verdicts/3_wa/: test.py
tests/3_verdicts/1_ac/: test.py
tests/3_verdicts/1_ac/src/a_plus_b/: sum.cpp  sum_with_spaces.py
tests/3_verdicts/1_ac/src/find_the_ones/: gen.py  solution_with_spaces.py
tests/3_verdicts/2_re/: test.py
tests/3_verdicts/2_re/src/: gen_a_plus_b.py
tests/3_verdicts/3_wa/: test.py
tests/4_analyzer/stack_overflow/src/: 10_random_with_use_rev.cpp  3_accept_voidptr.cpp  5_accept_int.cpp  6_accept_long_long.cpp
tests/5_analyzer/stack_overflow/src/: 12_pure_in_another_thread.cpp  2_return.cpp  7_accept_long_double.cpp  8_random.cpp  9_random_with_use.cpp
tests/sources/a_plus_b/: verifier.py
tests/sources/find_the_ones/: gen.py  solution.py
tests/tests/1_init/1_usage/: test.py
tests/tests/1_init/2_tests_without_solution/: test.py
tests/tests/1_init/3_solution_without_tests/: test.py
tests/tests/1_init/4_tests_with_solution/: test.py
tests/tests/1_init/5_tests_with_solution_and_prime/: test.py
tests/tests/2_languages/2_c/: test.py
tests/tests/2_languages/3_cpp/: test.py
tests/tests/2_languages/4_java/: test.py
tests/tests/2_languages/5_kotlin/: test.py
tests/tests/2_languages/6_rust/: test.py
tests/tests/2_languages/7_go/: test.py
tests/tests/3_verdicts/1_ac/: test.py
tests/tests/3_verdicts/2_re/: test.py
tests/tests/3_verdicts/3_wa/: test.py
tests/tests/5_analyzer/stack_overflow/src/: 11_huge_array.cpp  1_pure.cpp  4_accept_short.cpp
tests/utils/: console.py  structs.py  test_launcher.py  tests_loader.py
